--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,5 +1,5 @@
-@import "nav.css";
-@import "footer.css";
+@import "/public/css/footer.css";
+@import "/public/css/nav.css";
 
 .hero-section {
   width: 100%;
